force-app/main/default/objects/Ordre_de_Mission__c/Ordre_de_Mission__c.object-meta.xml
<CustomObject>
    <description>Numéro de l&#39;ordre de mission incrémenté par Salesforce</description>
    <label>Ordre de Mission</label>
    <nameField>
        <displayFormat>OM-{00000}</displayFormat>
        <label>Numéro O.M</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordres de Mission</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>