force-app/main/default/objects/Ordre_de_Mission__c/fields/AdresseEmetteur__c.field-meta.xml
<CustomField>
    <fullName>AdresseEmetteur__c</fullName>
    <description>LADRM1 + LADRM2 + LADRM3 + LADRM4</description>
    <label>Adresse de l&#39;émetteur</label>
    <length>152</length>
    <type>Text</type>
</CustomField>