force-app/main/default/objects/Ordre_de_Mission__c/fields/AdresseLese__c.field-meta.xml
<CustomField>
    <fullName>AdresseLese__c</fullName>
    <description>LADRL1 + LADRL2 + LADRL3 + LADRL4</description>
    <label>Adresse du lésé</label>
    <length>152</length>
    <type>Text</type>
</CustomField>