force-app/main/default/objects/Ordre_de_Mission__c/fields/AdresseLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>AdresseLieuExamen__c</fullName>
    <description>LADRX1 + LADRX2 + LADRX3 + LADRX4</description>
    <label>Adresse du lieu d&#39;examen</label>
    <length>152</length>
    <type>Text</type>
</CustomField>