force-app/main/default/objects/Ordre_de_Mission__c/fields/AdresseTiers__c.field-meta.xml
<CustomField>
    <fullName>AdresseTiers__c</fullName>
    <description>[LADRT]</description>
    <label>Adresse du tiers</label>
    <length>152</length>
    <type>Text</type>
</CustomField>