force-app/main/default/objects/Ordre_de_Mission__c/fields/AssureProprietaireVehicule__c.field-meta.xml
<CustomField>
    <fullName>AssureProprietaireVehicule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ASSPRO</description>
    <label>Assuré propriétaire du véhicule</label>
    <type>Checkbox</type>
</CustomField>