force-app/main/default/objects/Ordre_de_Mission__c/fields/AutresPiecesAdressees__c.field-meta.xml
<CustomField>
    <fullName>AutresPiecesAdressees__c</fullName>
    <description>[TXT38]</description>
    <label>Autres pièces adressées</label>
    <length>38</length>
    <type>Text</type>
</CustomField>