force-app/main/default/objects/Ordre_de_Mission__c/fields/AutreTelephoneLese__c.field-meta.xml
<CustomField>
    <fullName>AutreTelephoneLese__c</fullName>
    <label>Autre Téléphone du lése</label>
    <type>Phone</type>
</CustomField>