force-app/main/default/objects/Ordre_de_Mission__c/fields/CategorieMateriel__c.field-meta.xml
<CustomField>
    <fullName>CategorieMateriel__c</fullName>
    <description>[CATMAT]</description>
    <label>Catégorie matériel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>