force-app/main/default/objects/Ordre_de_Mission__c/fields/CirconstancesSinistre__c.field-meta.xml
<CustomField>
    <fullName>CirconstancesSinistre__c</fullName>
    <description>LCIRC</description>
    <label>Circonstances du sinistre</label>
    <length>160</length>
    <type>Text</type>
</CustomField>