force-app/main/default/objects/Ordre_de_Mission__c/fields/Clause1__c.field-meta.xml
<CustomField>
    <fullName>Clause1__c</fullName>
    <description>[CL1L1]</description>
    <label>Clause 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>