force-app/main/default/objects/Ordre_de_Mission__c/fields/Clause2__c.field-meta.xml
<CustomField>
    <fullName>Clause2__c</fullName>
    <description>[CL2L1]</description>
    <label>Clause 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>