force-app/main/default/objects/Ordre_de_Mission__c/fields/Clause3__c.field-meta.xml
<CustomField>
    <fullName>Clause3__c</fullName>
    <description>[CL3L1]</description>
    <label>Clause 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>