force-app/main/default/objects/Ordre_de_Mission__c/fields/ClientCode__c.field-meta.xml
<CustomField>
    <fullName>ClientCode__c</fullName>
    <description>[HDRSOC]</description>
    <label>Code du client assureur</label>
    <length>3</length>
    <type>Text</type>
</CustomField>