force-app/main/default/objects/Ordre_de_Mission__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <description>[HDRLIBSOC]</description>
    <label>Nom du client - assureur</label>
    <length>27</length>
    <type>Text</type>
</CustomField>