force-app/main/default/objects/Ordre_de_Mission__c/fields/CodeLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>CodeLieuExamen__c</fullName>
    <description>[LIEXE]</description>
    <inlineHelpText>[LIEXE]</inlineHelpText>
    <label>Code lieu examen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <label>Réparateur</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Lésé</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Bureau de l&#39;expert</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Centre d&#39;expertise</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>