force-app/main/default/objects/Ordre_de_Mission__c/fields/CodePlafondGarantie__c.field-meta.xml
<CustomField>
    <fullName>CodePlafondGarantie__c</fullName>
    <description>TMAXGA</description>
    <label>Code plafond de garantie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Valeur à dire d&#39;expert</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Valeur conventionnelle</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Valeur fixe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>