force-app/main/default/objects/Ordre_de_Mission__c/fields/CodePostalEmetteur__c.field-meta.xml
<CustomField>
    <fullName>CodePostalEmetteur__c</fullName>
    <description>COPOM</description>
    <label>Code postal émetteur ou code départ</label>
    <length>5</length>
    <type>Text</type>
</CustomField>