force-app/main/default/objects/Ordre_de_Mission__c/fields/CodePostalLeseOuCodeDept__c.field-meta.xml
<CustomField>
    <fullName>CodePostalLeseOuCodeDept__c</fullName>
    <description>[COPOL] Code postal du lésé ou code département + &quot;   &quot;</description>
    <inlineHelpText>[COPOL] Code postal du lésé ou code département + &quot;   &quot;</inlineHelpText>
    <label>Code postal du lésé ou code département</label>
    <length>5</length>
    <type>Text</type>
</CustomField>