force-app/main/default/objects/Ordre_de_Mission__c/fields/CodePostalLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>CodePostalLieuExamen__c</fullName>
    <description>[COPOX] Code postal du lieu d&#39;examen ou code département + &quot;   &quot;</description>
    <inlineHelpText>[COPOX] Code postal du lieu d&#39;examen ou code département + &quot; &quot;</inlineHelpText>
    <label>Code postal du lieu d&#39;examen</label>
    <length>5</length>
    <type>Text</type>
</CustomField>