force-app/main/default/objects/Ordre_de_Mission__c/fields/CodePostalLieuSinistre__c.field-meta.xml
<CustomField>
    <fullName>CodePostalLieuSinistre__c</fullName>
    <description>CPOSIN</description>
    <label>Code postal du lieu du sinistre</label>
    <length>5</length>
    <type>Text</type>
</CustomField>