force-app/main/default/objects/Ordre_de_Mission__c/fields/CodePostalTiers__c.field-meta.xml
<CustomField>
    <fullName>CodePostalTiers__c</fullName>
    <description>[COPOT]</description>
    <label>Code postal du tiers</label>
    <length>5</length>
    <type>Text</type>
</CustomField>