force-app/main/default/objects/Ordre_de_Mission__c/fields/CodeReparateur__c.field-meta.xml
<CustomField>
    <fullName>CodeReparateur__c</fullName>
    <description>[COREP] 
RDV (permet de reconnaître le réparateur)</description>
    <label>Code réparateur de l’assureur</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>