force-app/main/default/objects/Ordre_de_Mission__c/fields/CodeSociete__c.field-meta.xml
<CustomField>
    <fullName>CodeSociete__c</fullName>
    <description>[COSOC]</description>
    <label>Code société</label>
    <length>3</length>
    <type>Text</type>
</CustomField>