force-app/main/default/objects/Ordre_de_Mission__c/fields/CodeSocieteTiers__c.field-meta.xml
<CustomField>
    <fullName>CodeSocieteTiers__c</fullName>
    <description>[COSOCT]</description>
    <label>Code Société du tiers</label>
    <length>3</length>
    <type>Text</type>
</CustomField>