force-app/main/default/objects/Ordre_de_Mission__c/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <description>[COM1] [COM2] [COM3] [COM4] [COM5] [COM6] [COM7] [COM8] [COM9] [COM10]</description>
    <label>Commentaires</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>