force-app/main/default/objects/Ordre_de_Mission__c/fields/ConditionsAchatVehicule__c.field-meta.xml
<CustomField>
    <fullName>ConditionsAchatVehicule__c</fullName>
    <description>[MODACH]</description>
    <label>Conditions d&#39;achat du véhicule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Usuelles</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Crédit bail - L.O.A</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>L.L.D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>