force-app/main/default/objects/Ordre_de_Mission__c/fields/CopieConstatAmiable__c.field-meta.xml
<CustomField>
    <fullName>CopieConstatAmiable__c</fullName>
    <description>[AMIAB]</description>
    <label>Copie du constat amiable</label>
    <length>2</length>
    <type>Text</type>
</CustomField>