force-app/main/default/objects/Ordre_de_Mission__c/fields/DateDepotVehiculeExamen__c.field-meta.xml
<CustomField>
    <fullName>DateDepotVehiculeExamen__c</fullName>
    <description>[DADEX] Date et heure (si connue) du rendez-vous durant lequel l&#39;expert inspecte le véhicule.</description>
    <inlineHelpText>[DADEX] Date et heure (si connue) du rendez-vous durant lequel l&#39;expert inspecte le véhicule.</inlineHelpText>
    <label>Date de dépôt du véhicule pour examen</label>
    <type>DateTime</type>
</CustomField>