force-app/main/default/objects/Ordre_de_Mission__c/fields/DateMiseCirculationReelle__c.field-meta.xml
<CustomField>
    <fullName>DateMiseCirculationReelle__c</fullName>
    <description>[DATMC]
Date de mise en circulation réelle</description>
    <label>Date de mise en circulation officielle</label>
    <type>DateTime</type>
</CustomField>