force-app/main/default/objects/Ordre_de_Mission__c/fields/DateMission__c.field-meta.xml
<CustomField>
    <fullName>DateMission__c</fullName>
    <description>[DATSA] Date à laquelle le client a enregistré la demande</description>
    <inlineHelpText>[DATSA] Date à laquelle le client a enregistré la demande</inlineHelpText>
    <label>Date de la mission</label>
    <type>Date</type>
</CustomField>