force-app/main/default/objects/Ordre_de_Mission__c/fields/DatePremiereMiseCirculation__c.field-meta.xml
<CustomField>
    <fullName>DatePremiereMiseCirculation__c</fullName>
    <description>[ADATMC]</description>
    <label>Date de 1ere mise en circulation retenue</label>
    <type>DateTime</type>
</CustomField>