force-app/main/default/objects/Ordre_de_Mission__c/fields/DateRDV__c.field-meta.xml
<CustomField>
    <fullName>DateRDV__c</fullName>
    <label>Date du RDV</label>
    <type>Date</type>
</CustomField>