force-app/main/default/objects/Ordre_de_Mission__c/fields/DateSinistre__c.field-meta.xml
<CustomField>
    <fullName>DateSinistre__c</fullName>
    <description>[DASIN] Date à laquelle est survenu le sinistre déclaré</description>
    <inlineHelpText>[DASIN] Date à laquelle est survenu le sinistre déclaré</inlineHelpText>
    <label>Date du sinistre</label>
    <type>Date</type>
</CustomField>