force-app/main/default/objects/Ordre_de_Mission__c/fields/DateSouscriptionContrat__c.field-meta.xml
<CustomField>
    <fullName>DateSouscriptionContrat__c</fullName>
    <description>DASCRI</description>
    <label>Date de souscription du contrat</label>
    <type>Date</type>
</CustomField>