force-app/main/default/objects/Ordre_de_Mission__c/fields/DateTarif__c.field-meta.xml
<CustomField>
    <fullName>DateTarif__c</fullName>
    <description>[DATAR]</description>
    <label>Date du tarif</label>
    <type>Date</type>
</CustomField>