force-app/main/default/objects/Ordre_de_Mission__c/fields/DirectivesParticulieres__c.field-meta.xml
<CustomField>
    <fullName>DirectivesParticulieres__c</fullName>
    <description>[DIPA1]</description>
    <inlineHelpText>Pour le produit AA :
- libellé : « VALEUR A NEUF JUSQU&#39;AUX n ANS DE L&#39;AUTOMOTEUR » avec n correspondant au niveau d’indemnisation</inlineHelpText>
    <label>Directives particulières</label>
    <length>560</length>
    <type>LongTextArea</type>
</CustomField>