force-app/main/default/objects/Ordre_de_Mission__c/fields/DommagesDeclares__c.field-meta.xml
<CustomField>
    <fullName>DommagesDeclares__c</fullName>
    <description>[DOMDEC] Dommages déclarés par l&#39;assuré dans le cadre du sinistre.</description>
    <label>Dommages déclarés</label>
    <length>80</length>
    <type>Text</type>
</CustomField>