force-app/main/default/objects/Ordre_de_Mission__c/fields/DommagesDeclaresTiers__c.field-meta.xml
<CustomField>
    <fullName>DommagesDeclaresTiers__c</fullName>
    <description>[DOMDET]</description>
    <label>Dommages déclarés tiers</label>
    <length>80</length>
    <type>Text</type>
</CustomField>