force-app/main/default/objects/Ordre_de_Mission__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Dossier créé suite à cette O.M.</description>
    <label>Dossier associé</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ordre de mission</relationshipLabel>
    <relationshipName>Ordres_de_mission</relationshipName>
    <type>Lookup</type>
</CustomField>