force-app/main/default/objects/Ordre_de_Mission__c/fields/Emetteur__c.field-meta.xml
<CustomField>
    <fullName>Emetteur__c</fullName>
    <label>Nom de l&#39;emetteur</label>
    <length>200</length>
    <type>Text</type>
</CustomField>