force-app/main/default/objects/Ordre_de_Mission__c/fields/FaxEmetteur__c.field-meta.xml
<CustomField>
    <fullName>FaxEmetteur__c</fullName>
    <description>[NEMFAX]</description>
    <label>N° de télécopie de l&#39;émetteur</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>