force-app/main/default/objects/Ordre_de_Mission__c/fields/GarantieMiseEnJeu__c.field-meta.xml
<CustomField>
    <fullName>GarantieMiseEnJeu__c</fullName>
    <description>[GARMJ] Garantie(s) de l&#39;assuré concerné par le sinistre.</description>
    <inlineHelpText>[GARMJ] Garantie(s) de l&#39;assuré concerné par le sinistre.</inlineHelpText>
    <label>Garantie mise en jeu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A : Avance recours</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R : Responsabilité civile</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D : Défense – recours</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T : Tierce</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C : Tierce collision</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>V : Vol</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I : Incendie</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B : Bris de glace</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Z : Autre</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>P : Protection juridique</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E : Absorption de corps étranger</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>F : dommage électrique</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>H : marchandise transportée</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>L : Vandalisme/attentat</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>M : bris de machine</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>N : catastrophe naturelle</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>U : dommages aux pneus</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>O : immobilisation</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>G : Passage sur dénivellation</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>J : Bris de moteur</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Q : Dommage électronique</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>K : Attelage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>