force-app/main/default/objects/Ordre_de_Mission__c/fields/GarantieMiseEnJeuDeux__c.field-meta.xml
<CustomField>
    <fullName>GarantieMiseEnJeuDeux__c</fullName>
    <description>[GARMJ2]</description>
    <label>2ème Garantie mise en jeu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A : Avance recours</fullName>
            </value>
            <value>
                <fullName>R : Responsabilité civile</fullName>
            </value>
            <value>
                <fullName>D : Défense – recours</fullName>
            </value>
            <value>
                <fullName>T : Tierce</fullName>
            </value>
            <value>
                <fullName>C : Tierce collision</fullName>
            </value>
            <value>
                <fullName>V : Vol</fullName>
            </value>
            <value>
                <fullName>I : Incendie</fullName>
            </value>
            <value>
                <fullName>B : Bris de glace</fullName>
            </value>
            <value>
                <fullName>Z : Autre</fullName>
            </value>
            <value>
                <fullName>P : Protection juridique</fullName>
            </value>
            <value>
                <fullName>E : Absorption de corps étranger</fullName>
            </value>
            <value>
                <fullName>F : dommage électrique</fullName>
            </value>
            <value>
                <fullName>H : marchandise transportée</fullName>
            </value>
            <value>
                <fullName>L : Vandalisme/attentat</fullName>
            </value>
            <value>
                <fullName>M : bris de machine</fullName>
            </value>
            <value>
                <fullName>N : catastrophe naturelle</fullName>
            </value>
            <value>
                <fullName>U : dommages aux pneus</fullName>
            </value>
            <value>
                <fullName>O : immobilisation</fullName>
            </value>
            <value>
                <fullName>G : Passage sur dénivellation</fullName>
            </value>
            <value>
                <fullName>J : Bris de moteur</fullName>
            </value>
            <value>
                <fullName>Q : Dommage électronique</fullName>
            </value>
            <value>
                <fullName>K : Attelage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>