force-app/main/default/objects/Ordre_de_Mission__c/fields/GarantieRemorquage__c.field-meta.xml
<CustomField>
    <fullName>GarantieRemorquage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[TGARE]</description>
    <label>Garantie remorquage</label>
    <type>Checkbox</type>
</CustomField>