force-app/main/default/objects/Ordre_de_Mission__c/fields/ImmatriculationVehiculeAssure__c.field-meta.xml
<CustomField>
    <fullName>ImmatriculationVehiculeAssure__c</fullName>
    <description>[IMMAT]</description>
    <inlineHelpText>[IMMAT]</inlineHelpText>
    <label>Immatriculation du véhicule de l&#39;assuré</label>
    <length>9</length>
    <type>Text</type>
</CustomField>