force-app/main/default/objects/Ordre_de_Mission__c/fields/ImmatriculationVehiculeTiers__c.field-meta.xml
<CustomField>
    <fullName>ImmatriculationVehiculeTiers__c</fullName>
    <description>[IMMATT]</description>
    <label>Immatriculation du véhicule du tiers</label>
    <length>9</length>
    <type>Text</type>
</CustomField>