force-app/main/default/objects/Ordre_de_Mission__c/fields/IndicateurReglementDirect__c.field-meta.xml
<CustomField>
    <fullName>IndicateurReglementDirect__c</fullName>
    <description>[RGDIR] Indique si le règlement doit se faire directement.</description>
    <inlineHelpText>[RGDIR] Indique si le règlement doit se faire directement.</inlineHelpText>
    <label>Indicateur règlement direct</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>N : Pas de règlement direct</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I : IDA</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T : Tierce ou Tierce collision</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D : IDA et tierce ou tierce collision</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>W : Vol sous réserve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>