force-app/main/default/objects/Ordre_de_Mission__c/fields/IndicateurVGAVE__c.field-meta.xml
<CustomField>
    <fullName>IndicateurVGAVE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[VGAOM]</description>
    <label>Indicateur VGA – VE</label>
    <type>Checkbox</type>
</CustomField>