force-app/main/default/objects/Ordre_de_Mission__c/fields/InfoConstat__c.field-meta.xml
<CustomField>
    <fullName>InfoConstat__c</fullName>
    <description>AUTPIE</description>
    <label>Informations du constat</label>
    <length>80</length>
    <type>Text</type>
</CustomField>