force-app/main/default/objects/Ordre_de_Mission__c/fields/Lese__c.field-meta.xml
<CustomField>
    <fullName>Lese__c</fullName>
    <description>[NOMLE]</description>
    <inlineHelpText>[NOMLE]</inlineHelpText>
    <label>Nom du lésé</label>
    <length>27</length>
    <type>Text</type>
</CustomField>