force-app/main/default/objects/Ordre_de_Mission__c/fields/LibelleMarqueVehiculeAssure__c.field-meta.xml
<CustomField>
    <fullName>LibelleMarqueVehiculeAssure__c</fullName>
    <description>LICST2</description>
    <label>Libellé marque du véhicule de l’assuré</label>
    <length>30</length>
    <type>Text</type>
</CustomField>