force-app/main/default/objects/Ordre_de_Mission__c/fields/LibelleMarqueVehiculeTiers__c.field-meta.xml
<CustomField>
    <fullName>LibelleMarqueVehiculeTiers__c</fullName>
    <description>[LICSTT]</description>
    <label>Libellé marque du véhicule tiers</label>
    <length>30</length>
    <type>Text</type>
</CustomField>