force-app/main/default/objects/Ordre_de_Mission__c/fields/LibelleModeleVehiculeAssure__c.field-meta.xml
<CustomField>
    <fullName>LibelleModeleVehiculeAssure__c</fullName>
    <description>LIMOD2</description>
    <label>Libellé modèle du véhicule de l’assuré</label>
    <length>30</length>
    <type>Text</type>
</CustomField>