force-app/main/default/objects/Ordre_de_Mission__c/fields/LibelleModeleVehiculeTiers__c.field-meta.xml
<CustomField>
    <fullName>LibelleModeleVehiculeTiers__c</fullName>
    <description>[LIMODT]</description>
    <label>Libellé modele du véhicule tiers</label>
    <length>30</length>
    <type>Text</type>
</CustomField>