force-app/main/default/objects/Ordre_de_Mission__c/fields/LibelleSocieteTiers__c.field-meta.xml
<CustomField>
    <fullName>LibelleSocieteTiers__c</fullName>
    <description>[LISOCT]</description>
    <label>Libellé de la Société du tiers</label>
    <length>20</length>
    <type>Text</type>
</CustomField>