force-app/main/default/objects/Ordre_de_Mission__c/fields/LibelleValeurConventionnelle__c.field-meta.xml
<CustomField>
    <fullName>LibelleValeurConventionnelle__c</fullName>
    <description>LIBCONV</description>
    <label>Libellé de la valeur conventionnelle</label>
    <length>10</length>
    <type>Text</type>
</CustomField>