force-app/main/default/objects/Ordre_de_Mission__c/fields/LimiteAccessoires__c.field-meta.xml
<CustomField>
    <fullName>LimiteAccessoires__c</fullName>
    <description>MMAXAC</description>
    <label>Limite accessoires</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>