force-app/main/default/objects/Ordre_de_Mission__c/fields/LimiteEventuelleReglementDirect__c.field-meta.xml
<CustomField>
    <fullName>LimiteEventuelleReglementDirect__c</fullName>
    <description>MMAXEV</description>
    <label>Limite éventuelle de règlement direct</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>