force-app/main/default/objects/Ordre_de_Mission__c/fields/ListeCodesGarantiesAcquises__c.field-meta.xml
<CustomField>
    <fullName>ListeCodesGarantiesAcquises__c</fullName>
    <description>LISGAR</description>
    <label>Liste des codes de garanties acquises</label>
    <length>30</length>
    <type>Text</type>
</CustomField>