force-app/main/default/objects/Ordre_de_Mission__c/fields/LocaliteEmetteur__c.field-meta.xml
<CustomField>
    <fullName>LocaliteEmetteur__c</fullName>
    <description>LOCAM</description>
    <label>Localité de l&#39;émetteur</label>
    <length>27</length>
    <type>Text</type>
</CustomField>