force-app/main/default/objects/Ordre_de_Mission__c/fields/LocaliteLese__c.field-meta.xml
<CustomField>
    <fullName>LocaliteLese__c</fullName>
    <description>LOCALS</description>
    <label>Localité du lésé</label>
    <length>38</length>
    <type>Text</type>
</CustomField>