force-app/main/default/objects/Ordre_de_Mission__c/fields/LocaliteLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>LocaliteLieuExamen__c</fullName>
    <description>LOCAX</description>
    <label>Localité du lieu d&#39;examen</label>
    <length>38</length>
    <type>Text</type>
</CustomField>