force-app/main/default/objects/Ordre_de_Mission__c/fields/LocaliteSinistre__c.field-meta.xml
<CustomField>
    <fullName>LocaliteSinistre__c</fullName>
    <description>LLISIN</description>
    <label>Localité du sinistre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>