force-app/main/default/objects/Ordre_de_Mission__c/fields/LocaliteTiers__c.field-meta.xml
<CustomField>
    <fullName>LocaliteTiers__c</fullName>
    <description>[LOCAT]</description>
    <label>Localité du tiers</label>
    <length>38</length>
    <type>Text</type>
</CustomField>