force-app/main/default/objects/Ordre_de_Mission__c/fields/MontantLimiteRemorquage__c.field-meta.xml
<CustomField>
    <fullName>MontantLimiteRemorquage__c</fullName>
    <description>MMAXRE</description>
    <label>Montant limite de remorquage</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>