force-app/main/default/objects/Ordre_de_Mission__c/fields/MontantPlafondFranchise__c.field-meta.xml
<CustomField>
    <fullName>MontantPlafondFranchise__c</fullName>
    <description>MTFR2</description>
    <label>Montant plafond de franchise</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>