force-app/main/default/objects/Ordre_de_Mission__c/fields/MontantPlafondGarantie__c.field-meta.xml
<CustomField>
    <fullName>MontantPlafondGarantie__c</fullName>
    <description>MTGAR</description>
    <label>Montant plafond de garantie</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>