force-app/main/default/objects/Ordre_de_Mission__c/fields/MontantPlancheOuFixeFranchise__c.field-meta.xml
<CustomField>
    <fullName>MontantPlancheOuFixeFranchise__c</fullName>
    <description>[MTFR1]</description>
    <inlineHelpText>[MTFR1]</inlineHelpText>
    <label>Montant planché ou fixe de franchise</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>