force-app/main/default/objects/Ordre_de_Mission__c/fields/NatureMission__c.field-meta.xml
<CustomField>
    <fullName>NatureMission__c</fullName>
    <description>[NATMIS]</description>
    <inlineHelpText>[NATMIS]</inlineHelpText>
    <label>Nature de la mission</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A : Expertise à distance</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B : Estimation véhicule / Valeur Assurance</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C : RCP</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D : Assistance technique</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E : Mission d&#39;expertise</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>F : Mission d&#39;expertise Tiers</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>G : Vol propriété de la Cie</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>H : Vol non retrouvé</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I : Suivi VEI</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>J : Enquête</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>K : Autre</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>L : Mission agricole</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>N : Avarie Mécanique</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>O : Examen VE initié par les FO</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>P : Protection Juridique</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Q : Mission à titre conservatoire</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R : Restitution</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>S : Suivi VE</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T : Mission automatique / Recours forfaitaire</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>U : Avis sur pièces</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>V : Examen visuel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>