force-app/main/default/objects/Ordre_de_Mission__c/fields/NDossierEmetteur__c.field-meta.xml
<CustomField>
    <fullName>NDossierEmetteur__c</fullName>
    <description>NUDOS</description>
    <label>N° de dossier chez l&#39;émetteur</label>
    <length>12</length>
    <type>Text</type>
</CustomField>