force-app/main/default/objects/Ordre_de_Mission__c/fields/NomExamen__c.field-meta.xml
<CustomField>
    <fullName>NomExamen__c</fullName>
    <description>[NOMEX]</description>
    <inlineHelpText>[NOMEX]</inlineHelpText>
    <label>Nom examen</label>
    <length>27</length>
    <type>Text</type>
</CustomField>