force-app/main/default/objects/Ordre_de_Mission__c/fields/NomGestionnaire__c.field-meta.xml
<CustomField>
    <fullName>NomGestionnaire__c</fullName>
    <label>Nom du gestionnaire de dossier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>