force-app/main/default/objects/Ordre_de_Mission__c/fields/NomLieuRDV__c.field-meta.xml
<CustomField>
    <fullName>NomLieuRDV__c</fullName>
    <label>Nom du lieu de RDV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>