force-app/main/default/objects/Ordre_de_Mission__c/fields/NomTiers__c.field-meta.xml
<CustomField>
    <fullName>NomTiers__c</fullName>
    <description>[NOMTI]</description>
    <label>Nom du tiers</label>
    <length>27</length>
    <type>Text</type>
</CustomField>