force-app/main/default/objects/Ordre_de_Mission__c/fields/NPoliceAssure__c.field-meta.xml
<CustomField>
    <fullName>NPoliceAssure__c</fullName>
    <description>NUPOL</description>
    <label>N° de police de l&#39;assuré</label>
    <length>17</length>
    <type>Text</type>
</CustomField>